<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ic_bg_main"
    tools:context="gr.sylesakis.expensesmanager.Activities.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MAIN MENU"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/gold"
            android:gravity="center"
            android:padding="@dimen/padding_5"
            android:layout_alignParentTop="true"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cost_category"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_add_cost_cat"
                        android:onClick="addCategoryFunc"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/expense"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_add_exp"
                        android:onClick="addExpenseFunc"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/inspection"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_inspection"
                    android:onClick="inspectionCostFunc"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/analysis"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_analysis"
                    android:onClick="analysisExpenseFunc"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/author"
            android:gravity="center"
            android:text="@string/SyleopoulosAnastasios"
            android:layout_alignParentBottom="true"
            android:background="@color/cast_expanded_controller_progress_text_color" />

</RelativeLayout>
